tests/lang/compile_fail/specialized_impl_body_mismatch.kojs
struct Box<T>
  value: T
end

extend Box<Int>
  fn squared(self) -> String
    self.value * self.value
  end
end

b: Box<Int> = Box{value: 3}
b.squared().print()
